@@ -6,6 +6,7 @@ export(as_factor)
 export(as_integer)
 export(as_numeric)
 export(launch)
+export(refactor)
 export(size_margin)
 export(size_padding)
 import(dplyr)
