@@ -94,11 +94,13 @@ element_diag <- list("1", "2", "3")
 names(element_diag) <- c(i18n$t("결측치"), i18n$t("음수값"), i18n$t("0값"))
 
 element_manipulate_variables <- list("Rename", "Change type", "Remove",
-                                     "Reorder levels", "Transform", "Bin")
+                                     "Reorder levels", "Reorganize levels", 
+                                     "Transform", "Bin")
 names(element_manipulate_variables) <- c(i18n$t("이름 변경"), 
                                          i18n$t("형 변환"), 
                                          i18n$t("변수 삭제"),
-                                         i18n$t("범주 순서변경"),
+                                         i18n$t("범주 레벨 순서변경"),
+                                         i18n$t("범주 레벨 변경/병합"),
                                          i18n$t("변수변환"),
                                          i18n$t("비닝"))
 
