@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/change_type.R
+% Please edit documentation in R/data.R
 \name{as_date}
 \alias{as_date}
 \title{Convert year-month-day format factor/character to date}
