@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/change_type.R
+% Please edit documentation in R/data.R
 \name{as_factor}
 \alias{as_factor}
 \title{Convert one dimension data to factor}
