@@ -41,6 +41,7 @@ CHANGES IN R VERSION 0.5.0.9000:
         . Change data type
         . Remove variables
         . Reorder levels
+        . Reorganize levels
         . Transform
         . Bin
       
